--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "course-work",
   "version": "0.1.0",
+  "homepage": "https://melk0or.github.io/courseWork_page",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "gh-pages": "^6.1.0",
     "node-sass": "^9.0.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
